--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>Fundacion Dashinejo, el Divo | Julieth Sarmiento</title>
     </head>
 
-    <body class="">
+    <body>
 
         <header class="header">
             <h1 class="header-title">Fundación Bebé Vader</h1>
@@ -40,20 +40,20 @@
                         <label for="age">Edad:</label>
                         <select name="age" id="age" required>
                             <option hidden selected></option>
-                            <option value="0"> 0 a 5 meses</option>
-                            <option value="1">5 meses a 9 meses</option>
-                            <option value="2">1 año a 4 años</option>
-                            <option value="3">5 años a 9 años</option>
-                            <option value="4">10 años a 15 años</option>
+                            <option> 0 a 5 meses</option>
+                            <option>5 meses a 9 meses</option>
+                            <option>1 año a 4 años</option>
+                            <option>5 años a 9 años</option>
+                            <option>10 años a 15 años</option>
                         </select>
                     </div>
 
                     <div class="form-element">
                         <label for="sex">Sexo:</label>
                         <select name="sex" id="sex" required>
-                            <option value=""></option>
-                            <option value="1">Hembra</option>
-                            <option value="0">Macho</option>
+                            <option hidden selected></option>
+                            <option >Hembra</option>
+                            <option >Macho</option>
                         </select>
                     </div>
 
@@ -66,8 +66,8 @@
                         <label for="special">Condiciones especiales:</label>
                         <select name="special" id="special" required>
                             <option hidden selected></option>
-                            <option value="yes">Si</option>
-                            <option value="no">No</option>
+                            <option>Si</option>
+                            <option>No</option>
                         </select>
                     </div>
 
@@ -75,34 +75,33 @@
                         <label for="size">Tamaño:</label>
                         <select name="size" id="size" required>
                             <option hidden selected></option>
-                            <option value="0">No se sabe</option>
-                            <option value="1">Pequeño</option>
-                            <option value="2">Mediano</option>
-                            <option value="3">Grande</option>
+                            <option>No se sabe</option>
+                            <option>Pequeño</option>
+                            <option>Mediano</option>
+                            <option></option>Grande</option>
                         </select>
                     </div>
 
                     <div class="form-element">
-                        <label for="ṕersonality">Temperamento:</label>
+                        <label for="personality">Temperamento:</label>
                         <select name="personality" id="personality" required>
                             <option hidden selected></option>
-                            <option value="0">Tranquilo</option>
-                            <option value="1">Nervioso</option>
-                            <option value="2">Juguetón</option>
-                            <option value="3">Dominante</option>
-                            <option value="4">Agresivo</option>
-                            <option value="5">Sumiso</option>
+                            <option>Tranquilo</option>
+                            <option>Nervioso</option>
+                            <option>Juguetón</option>
+                            <option>Dominante</option>
+                            <option>Agresivo</option>
+                            <option>Sumiso</option>
                         </select>
                     </div>
 
                     <div class="form-element">
                         <label for="status">Estado:</label>
                         <select name="status" id="status" required>
-                            <option hidden>Seleccione</option>
-                            <option value="0" selected></option>
-                            <option value="1" >En adopción</option>
-                            <option value="2">En proceso de adopción</option>
-                            <option value="3">Adoptado</option>
+                            <option hidden selected></option>
+                            <option>En adopción</option>
+                            <option>En proceso de adopción</option>
+                            <option>Adoptado</option>
                         </select>
                     </div>
                         
@@ -115,6 +114,7 @@
             </section>
 
             <aside class="main-aside ">
+                <h2 class="main-section-subtitle">¡Nuetros rescatados!</h2>
                 <img class="picture-one" src="assets/images/portada.jpg" alt="Imagen de bebe vader cuando tenia 2 meses">
                 <div>
                     <ul class="aside-list">
@@ -129,146 +129,6 @@
         </main>
 
         <section class="cards-container wrapper">
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro1.jpeg" alt="foto del perro 1">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro2.jpeg" alt="foto del perro 2">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro3.jpeg" alt="foto del perro 3">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro4.jpeg" alt="foto del perro 4">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro5.jpeg" alt="foto del perro 5">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro6.jpeg" alt="foto del perro 6">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro7.jpeg" alt="foto del perro 7">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro8.jpeg" alt="foto del perro 8">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro9.jpeg" alt="foto del perro 9">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
-            <div class="card">
-                <img class="card-picture" src="assets/images/perro10.jpeg" alt="foto del perro 10">
-                <aside class="card-information">
-                    <h3 class="card-information-name">Nombre:</h3>
-                    <p class="card-information-text">Edad: </p>
-                    <p class="card-information-text">Sexo: </p>
-                    <p class="card-information-text">Raza: </p>
-                    <p class="card-information-text">Condiciones especiales: </p>
-                    <p class="card-information-text">Tamaño: </p>
-                    <p class="card-information-text">Temperamento: </p>
-                    <p class="card-information-text">Estado: </p>
-                </aside>
-            </div>
-
         </section>
 
         <footer class="footer">
@@ -276,4 +136,7 @@
         </footer>
 
     </body>
+
+    <script src="scrips/classes.js"></script>
+    <script src="scrips/main.js"></script>
 </html>
