arregle el error de las cards

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <option>No se sabe</option>
                             <option>Pequeño</option>
                             <option>Mediano</option>
-                            <option></option>Grande</option>
+                            <option>Grande</option>
                         </select>
                     </div>
 
