proyecto terminado: HTML, CSS y JS

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <img class="picture-one" src="assets/images/portada.jpg" alt="Imagen de bebe vader cuando tenia 2 meses">
                 <div>
                     <ul class="aside-list">
-                        <li><a href="" class="aside-list-element-link">Ver todos los perros</a></li>
-                        <li><a href="" class="aside-list-element-link">Ver perros en adopción</a></li>
-                        <li><a href="" class="aside-list-element-link">Ver perros en proceso de adopción</a></li>
-                        <li><a href="" class="aside-list-element-link">Ver perros adoptados</a></li>
+                        <li><button id="all-dogs" class="aside-list-element-link filter">Ver todos los perros</button></li>
+                        <li><button id="in-adoption" class="aside-list-element-link filter">Ver perros en adopción</button></li>
+                        <li><button id="in-process" class="aside-list-element-link filter">Ver perros en proceso de adopción</button></li>
+                        <li><button id="adopted" class="aside-list-element-link filter">Ver perros adoptados</button></li>
                     </ul>
                 </div>
             </aside>
