corregi el nombre de la pagina en el navegador

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Open+Sans:wght@300&family=Satisfy&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/style.css">
         
-        <title>Fundacion Dashinejo, el Divo | Julieth Sarmiento</title>
+        <title>Fundacion Bebé Vader | Julieth Sarmiento</title>
     </head>
 
     <body>
